@@ -8,4 +8,3 @@ nodist_noinst_HEADERS = \
 	config.h \
 	config-internal-compiler.h \
 	config-internal-libpq.h
-
